fix: disabled zooming and added overflow (mobile optimization)

--- a/src/app.css
+++ b/src/app.css
@@ -5,9 +5,14 @@
 @tailwind utilities;
 
 @layer base {
+	* {
+		touch-action: pan-x pan-y;
+	}
+
 	html {
 		@apply bg-background;
 		@apply text-text;
+		@apply overflow-hidden;
 	}
 
 	h1 {
